--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
