--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
